--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "version": "5.2.1",
     "templateVersion": "1.0.0"
   },
-  "main": "dist/restate.umd.js",
+  "main": "dist/lib/index.js",
   "module": "dist/restate.es5.js",
   "typings": "dist/types/index.d.ts",
   "files": ["dist"],
