--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es5",
+    "allowJs": true,
     "module": "es2015",
     "lib": ["es2015", "es2016", "es2017", "dom"],
     "sourceMap": true,
