--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.4.4",
     "prompt": "^1.0.0",
+    "redux-mock-store": "^1.5.1",
     "replace-in-file": "^3.0.0-beta.2",
     "rimraf": "^2.6.1",
     "rollup": "^0.57.0",
@@ -103,9 +104,9 @@
     "tslint-config-prettier": "^1.1.0",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.8.3",
-    "validate-commit-msg": "^2.12.2",
-    "redux-mock-store": "^1.5.1",
-    "@types/expect": "^1.20.3",
-    "@types/redux": "^3.6.0"
+    "validate-commit-msg": "^2.12.2"
+  },
+  "dependencies": {
+    "create-subscription": "^16.3.2"
   }
 }
