--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "moduleResolution": "node",
     "target": "es5",
     "module": "es2015",
+    "jsx": "react",
     "lib": ["es2015", "es2016", "es2017", "dom"],
     "sourceMap": true,
     "declaration": true,
