--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "bench": "node --experimental-modules --expose-gc bench/bench.js"
   },
   "lint-staged": {
     "{src,test}/**/*.tsx?": [
@@ -80,12 +81,17 @@
     "coveralls": "^3.0.0",
     "cross-env": "^5.0.1",
     "cz-conventional-changelog": "^2.0.0",
+    "immer": "latest",
+    "immutable": "latest",
     "jest": "^22.0.2",
     "lint-staged": "^7.0.0",
     "lodash": "latest",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.4.4",
+    "pretty-hrtime": "1.0.3",
     "prompt": "^1.0.0",
+    "react": "16.3.2",
+    "redux": "latest",
     "redux-mock-store": "^1.5.1",
     "replace-in-file": "^3.0.0-beta.2",
     "rimraf": "^2.6.1",
@@ -104,6 +110,7 @@
     "validate-commit-msg": "^2.12.2"
   },
   "dependencies": {
+    "@types/react": "^16.3.14",
     "create-subscription": "^16.3.2",
     "react-test-renderer": "^16.3.2"
   }
