--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es5",
     "module": "es2015",
     "jsx": "react",
+    "downlevelIteration": true,
     "lib": ["es2015", "es2016", "es2017", "dom"],
     "sourceMap": true,
     "declaration": true,
