--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "bench": "node --experimental-modules --expose-gc bench/bench.js"
   },
   "lint-staged": {
-    "{src,test}/**/*.tsx?": ["prettier --write --no-semi --single-quote", "git add"]
+    "{src,test}/**/*.tsx?": [
+      "prettier --write --no-semi --single-quote",
+      "git add"
+    ]
   },
   "config": {
     "commitizen": {
@@ -41,8 +44,7 @@
     },
     "validate-commit-msg": {
       "types": "conventional-commit-types",
-      "helpMessage":
-        "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
+      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
     }
   },
   "jest": {
@@ -50,8 +52,15 @@
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": ["ts", "tsx", "js"],
-    "coveragePathIgnorePatterns": ["/node_modules/", "/test/"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 40,
@@ -67,6 +76,7 @@
     "@types/jest": "^22.2.3",
     "@types/node": "^9.3.0",
     "@types/redux": "^3.6.0",
+    "benchmark": "^2.1.4",
     "colors": "^1.1.2",
     "commitizen": "^2.9.6",
     "coveralls": "^3.0.0",
@@ -81,7 +91,9 @@
     "prettier": "^1.4.4",
     "pretty-hrtime": "1.0.3",
     "prompt": "^1.0.0",
+    "proxyequal": "^1.5.2",
     "react": "16.3.2",
+    "react-test-renderer": "^16.3.2",
     "redux": "latest",
     "redux-mock-store": "^1.5.1",
     "replace-in-file": "^3.0.0-beta.2",
@@ -98,13 +110,13 @@
     "tslint-config-prettier": "^1.1.0",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.8.3",
-    "validate-commit-msg": "^2.12.2",
-    "benchmark": "^2.1.4",
-    "proxyequal": "^1.5.2",
-    "react-test-renderer": "^16.3.2"
+    "validate-commit-msg": "^2.12.2"
   },
   "peerDependencies": {
     "lodash": "*",
     "redux": "*"
+  },
+  "dependencies": {
+    "object-path-immutable": "^1.0.2"
   }
 }
