--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "bench": "node --experimental-modules --expose-gc bench/bench.js"
   },
   "lint-staged": {
-    "{src,test}/**/*.tsx?": ["prettier --write --no-semi --single-quote", "git add"]
+    "{src,test}/**/*.tsx?": [
+      "prettier --write --no-semi --single-quote",
+      "git add"
+    ]
   },
   "config": {
     "commitizen": {
@@ -41,8 +44,7 @@
     },
     "validate-commit-msg": {
       "types": "conventional-commit-types",
-      "helpMessage":
-        "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
+      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
     }
   },
   "jest": {
@@ -50,8 +52,15 @@
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": ["ts", "tsx", "js"],
-    "coveragePathIgnorePatterns": ["/node_modules/", "/test/"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 40,
@@ -108,6 +117,7 @@
     "redux": "*"
   },
   "dependencies": {
+    "@types/react": "^16.3.16",
     "mobx": "^4.3.0",
     "object-path-immutable": "^1.0.2"
   }
