fixed buts with use

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kraken97/restate",
-  "version": "1.1.1",
+  "version": "3.0.2",
   "description": "",
   "keywords": [],
   "kibana": {
@@ -8,7 +8,7 @@
     "templateVersion": "1.0.0"
   },
   "main": "dist/lib/index.js",
-  "module": "dist/restate.es5.js",
+  "module": "dist/lib/index.js",
   "typings": "dist/types/index.d.ts",
   "author": "Dima Zherebko <kraken@live.ru>",
   "repository": {
@@ -34,10 +34,7 @@
     "bench2": "matcha ./bench/suite.js"
   },
   "lint-staged": {
-    "{src,test}/**/*.tsx?": [
-      "prettier --write --no-semi --single-quote",
-      "git add"
-    ]
+    "{src,test}/**/*.tsx?": ["prettier --write --no-semi --single-quote", "git add"]
   },
   "config": {
     "commitizen": {
@@ -45,7 +42,8 @@
     },
     "validate-commit-msg": {
       "types": "conventional-commit-types",
-      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
+      "helpMessage":
+        "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
     }
   },
   "jest": {
@@ -53,15 +51,8 @@
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ],
+    "moduleFileExtensions": ["ts", "tsx", "js"],
+    "coveragePathIgnorePatterns": ["/node_modules/", "/test/"],
     "coverageThreshold": {
       "global": {
         "branches": 40,
