--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "jsx": "react",
     "downlevelIteration": true,
     "lib": ["es2015", "es2016", "es2017", "dom"],
@@ -12,7 +12,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
-    "outDir": "dist/lib",
+    "outDir": "dist/cjs",
     "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"]
