--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "3.1.0",
   "description": "",
   "keywords": [],
-  "main": "dist/lib/index.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/lib/index.js",
+  "esnext": "src/index.js",
   "typings": "dist/types/index.d.ts",
   "author": "Dima Zherebko <kraken@live.ru>",
   "repository": {
