--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@kraken97/restate",
-  "version": "3.1.0",
+  "version": "3.1.2",
   "description": "",
   "keywords": [],
-  "main": "dist/lib/index.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/lib/index.js",
   "typings": "dist/types/index.d.ts",
   "author": "Dima Zherebko <kraken@live.ru>",
