--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
-    "outDir": "dist/cjs",
+    "outDir": "dist/lib",
     "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"]
