update doc and rewrite types

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "okdux",
-  "version": "3.2.3",
+  "version": "3.3.3",
   "description": "redux made ok",
   "keywords": [],
   "main": "dist/cjs/index.js",
@@ -30,7 +30,10 @@
     "bench2": "matcha ./bench/suite.js"
   },
   "lint-staged": {
-    "{src,test}/**/*.tsx?": ["prettier --write --no-semi --single-quote", "git add"]
+    "{src,test}/**/*.tsx?": [
+      "prettier --write --no-semi --single-quote",
+      "git add"
+    ]
   },
   "config": {
     "commitizen": {
@@ -38,8 +41,7 @@
     },
     "validate-commit-msg": {
       "types": "conventional-commit-types",
-      "helpMessage":
-        "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
+      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
     }
   },
   "jest": {
@@ -47,8 +49,15 @@
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": ["ts", "tsx", "js"],
-    "coveragePathIgnorePatterns": ["/node_modules/", "/test/"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 40,
@@ -103,5 +112,8 @@
   "peerDependencies": {
     "lodash": "*",
     "redux": "*"
+  },
+  "dependencies": {
+    "symbol-observable": "^1.2.0"
   }
 }
